K1J-1074: Refactor PrefillUnmarshaller methods for improved clarity and consistency; update related converters and tests; add test for PrefillService